codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__thread_name_update_resume_hint.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: rendered
---
• Session renamed to review-fix. To resume this session run better-codex resume 123e4567-e89b-12d3-a456-426614174000
