codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_picker_empty_and_error.snap
---
source: tui/src/chatwidget/tests/usage_picker_tests.rs
expression: "states.join(\"\\n---\\n\")"
---
  Usage
  No stored accounts. Use /account to add one.

  Search accounts
› Show cumulative usage

  Press enter to confirm or esc to go back
---
  Usage
  Couldn't load accounts: service unavailable

  Search accounts
› Show cumulative usage
  Try again

  Press enter to confirm or esc to go back
